--- a/lora-retrainer/package.json
+++ b/lora-retrainer/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@hono/node-server": "^1.12.0",
 		"@hono/zod-validator": "^0.2.2",
-		"hono": "^4.4.12"
+		"hono": "^4.4.12",
+		"yaml": "^2.4.5"
 	}
 }
